--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,26 @@
-gensim==3.8.1
-numpy==1.19.2
-regex==2019.12.20
-scipy==1.3.2
-sentencepiece==0.1.85
-sklearn==0.0
-spacy==3.1
-torch==1.9.0+cu111
-transformers==4.9.2
-tqdm==4.41.0
-jsonlines==1.2.0
-nltk==3.5
+apex==0.9.10.dev0
+Cython==3.0.12
+dill==0.3.9
+fasttext==0.9.3
+gensim==4.3.3
+jsonlines==4.0.0
+networkx==3.4.2
+nltk==3.9.1
+numpy==1.26.4
+packaging==24.2
+pandas==2.2.3
+protobuf==6.30.2
+pyspark==3.5.0
+scikit-learn==1.6.1
+scipy==1.13.1
+sentencepiece==0.2.0
+six==1.17.0
+spacy==3.8.4
+sympy==1.13.1
+tensorboardX==2.6.2.2
+tensorflow==2.19.0
+tokenizers==0.21.1
+torch==2.6.0
+torchtext==0.11.0a0+92f4d15
+tqdm==4.67.1
+transformers==4.50.3
